# Bones-Underground-Discord-Bot

./: README.md  configurations.ini  items.json  keep_alive.py  main.py  pyproject.toml
chatlogs/: rythmbot.txt  🏹what-is-new.txt  🐛report-bugs.txt  💬lounge💬.txt
cogs/: help.py  info.py  item_lookup.py  status.py  support.py
