[tool.poetry]
name = "repl_python3_BU-Discord-Bot"
version = "0.1.0"
description = ""
authors = ["3818919 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
requests-html = "^0.10.0"
urlopen = "^1.0.0"
nextcord = "^2.0.0"
urllib3 = "^1.26.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
